refactor: PC 버전 UI 개선
- 장바구니 체크박스 열 너비 축소 (40px)
- 요약 탭 최대 너비 제한 (800px)

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <table id="cartTable">
           <thead>
             <tr>
-              <th class="center"><input type="checkbox" id="checkAll" checked></th>
+              <th class="center checkCol"><input type="checkbox" id="checkAll" checked></th>
               <th class="brandCol">브랜드</th>
               <th>상품명</th>
               <th class="center sizeCol">용량</th>
