--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div style="text-align:center; margin-top:16px; padding-top:12px; border-top:1px solid #e5e7eb; font-size:12px; color:#9ca3af;">
         파이어볼 공식 카페 2025 공동구매 리스트<br>
         fireball-cart.pages.dev<br>
-        세차갤 - times9517
+        세차갤 - times9517 (<a href="https://open.kakao.com/o/slem2xXh" target="_blank" style="color:#6b7280; text-decoration:underline;">문의</a>)
       </div>
     </details>
 
@@ -124,7 +124,7 @@
       <div style="text-align:center; margin-top:16px; padding-top:12px; border-top:1px solid #e5e7eb; font-size:12px; color:#9ca3af;">
         파이어볼 공식 카페 2025 공동구매 리스트<br>
         fireball-cart.pages.dev<br>
-        세차갤 - times9517
+        세차갤 - times9517 (<a href="https://open.kakao.com/o/slem2xXh" target="_blank" style="color:#6b7280; text-decoration:underline;">문의</a>)
       </div>
     </aside>
 
