--- a/index.html
+++ b/index.html
@@ -77,11 +77,7 @@
         </table>
       </div>
       <p class="small muted" style="margin-top:8px;">※ 데이터는 파이어볼 공식 카페(2025 공동구매 리스트)에서 발췌하였습니다.</p>
-      <div style="text-align:center; margin-top:16px; padding-top:12px; border-top:1px solid #e5e7eb; font-size:12px; color:#9ca3af;">
-        파이어볼 공식 카페 2025 공동구매 리스트<br>
-        fireball-cart.pages.dev<br>
-        세차갤 - times9517 (<a href="https://open.kakao.com/o/slem2xXh" target="_blank" style="color:#6b7280; text-decoration:underline;">문의</a>)
-      </div>
+      <div id="selectFooter"></div>
     </details>
 
     <!-- 장바구니 -->
@@ -121,11 +117,7 @@
         <button class="btn" id="clearCart">장바구니 비우기</button>
         <span class="small muted" id="countInfo"></span>
       </div>
-      <div style="text-align:center; margin-top:16px; padding-top:12px; border-top:1px solid #e5e7eb; font-size:12px; color:#9ca3af;">
-        파이어볼 공식 카페 2025 공동구매 리스트<br>
-        fireball-cart.pages.dev<br>
-        세차갤 - times9517 (<a href="https://open.kakao.com/o/slem2xXh" target="_blank" style="color:#6b7280; text-decoration:underline;">문의</a>)
-      </div>
+      <div id="cartFooter"></div>
     </aside>
 
     <!-- 요약 섹션 -->
